--- a/spring-mvc-form/pom.xml
+++ b/spring-mvc-form/pom.xml
@@ -86,6 +86,13 @@
 			<version>${servletapi.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		<!-- Mysql Connector -->
+	    <dependency>
+	      <groupId>mysql</groupId>
+	      <artifactId>mysql-connector-java</artifactId>
+	      <version>6.0.6</version>
+	    </dependency>
 
 	</dependencies>
 
